<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cultureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/culture" />


    <TextView
        android:id="@+id/bornTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/born"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/titlesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titles"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/aliasesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aliases"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/playedByTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played_by"
        android:textSize="16sp" />
</LinearLayout>